--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3188,7 +3188,7 @@ Anchor variants:<br />
 
 <h3>Media</h3>
 <div class="media">
-  <a class="media-left" href="#">
+  <a href="#" class="d-flex mr-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3202,7 +3202,7 @@ Anchor variants:<br />
     <h4 class="media-heading">Media heading</h4>
     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
   </div>
-  <a class="media-right" href="#">
+  <a href="#" class="d-flex ml-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
 </div>
@@ -3210,16 +3210,14 @@ Anchor variants:<br />
 
 <h3>Nested media</h3>
 <div class="media">
-  <div class="media-left">
-    <a href="#">
-      <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-    </a>
-  </div>
+  <a href="#" class="d-flex mr-1">
+    <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+  </a>
   <div class="media-body">
     <h4 class="media-heading">Media heading</h4>
     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
     <div class="media">
-      <a class="media-left" href="#">
+      <a href="#" class="d-flex mr-1">
         <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
       </a>
       <div class="media-body">
@@ -3232,11 +3230,9 @@ Anchor variants:<br />
 
 <h3>Media alignment</h3>
 <div class="media">
-  <div class="media-left">
-    <a href="#">
-      <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-    </a>
-  </div>
+  <a href="#" class="d-flex flex-self-start mr-1">
+    <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+  </a>
   <div class="media-body">
     <h4 class="media-heading">Top aligned media</h4>
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -3245,11 +3241,9 @@ Anchor variants:<br />
 </div>
 
 <div class="media">
-  <div class="media-left media-middle">
-    <a href="#">
-      <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-    </a>
-  </div>
+  <a href="#" class="d-flex flex-self-center mr-1">
+    <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+  </a>
   <div class="media-body">
     <h4 class="media-heading">Middle aligned media</h4>
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -3258,11 +3252,9 @@ Anchor variants:<br />
 </div>
 
 <div class="media">
-  <div class="media-left media-bottom">
-    <a href="#">
-      <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-    </a>
-  </div>
+  <a href="#" class="d-flex flex-self-end mr-1">
+    <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+  </a>
   <div class="media-body">
     <h4 class="media-heading">Bottom aligned media</h4>
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -3272,19 +3264,17 @@ Anchor variants:<br />
 
 
 <h3>Media list</h3>
-<ul class="media-list">
+<ul class="list-unstyled">
   <li class="media">
-    <div class="media-left">
-      <a href="#">
-        <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-      </a>
-    </div>
+    <a href="#" class="d-flex mr-1">
+      <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+    </a>
     <div class="media-body">
       <h4 class="media-heading">Media heading</h4>
       <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
       <!-- Nested media object -->
       <div class="media">
-        <a class="media-left" href="#">
+        <a href="#" class="d-flex mr-1">
           <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
         </a>
         <div class="media-body">
@@ -3292,11 +3282,9 @@ Anchor variants:<br />
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
           <!-- Nested media object -->
           <div class="media">
-            <div class="media-left">
-              <a href="#">
-                <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-              </a>
-            </div>
+            <a href="#" class="d-flex mr-1">
+              <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+            </a>
             <div class="media-body">
               <h4 class="media-heading">Nested media heading</h4>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
@@ -3306,11 +3294,9 @@ Anchor variants:<br />
       </div>
       <!-- Nested media object -->
       <div class="media">
-        <div class="media-left">
-          <a href="#">
-            <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-          </a>
-        </div>
+        <a href="#" class="d-flex mr-1">
+          <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+        </a>
         <div class="media-body">
           <h4 class="media-heading">Nested media heading</h4>
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
@@ -3323,11 +3309,9 @@ Anchor variants:<br />
       <h4 class="media-heading">Media heading</h4>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
     </div>
-    <div class="media-right">
-      <a href="#">
-        <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
-      </a>
-    </div>
+    <a href="#" class="d-flex ml-1">
+      <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
+    </a>
   </li>
 </ul>
 
