Quick tweaks to player layout

--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -65,11 +65,12 @@ body {
 
 .player {
     display: none;
+    align-items: center;
     margin-bottom: 20px;
     white-space: nowrap;
 }
 .player.ready {
-    display: block;
+    display: flex;
 }
 .player-control > .off {
     display: none;
@@ -87,8 +88,7 @@ body {
     line-height: inherit;
 }
 .player-seek {
-    display: inline-block;
-    margin-bottom: 0;
+    display: inline-flex;
     width: 100px;
     vertical-align: middle;
 }
@@ -101,7 +101,7 @@ body {
     display: none;
 }
 .player-seek .slider.slider-horizontal {
-    width: 80px;
+    width: 100px;
 }
 .player-mute {
     display: inline-block;
