--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -205,9 +205,9 @@ $(window).ready(function() {
             <strong>Single Slider:</strong>
             <div class="slider-sample">
                 <form class="form-inline">
-                    <div id="slider0" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
+                    <div id="slider0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
                         <div class="form-group">
-                            <label id="slider0_0_Label" for="slider0_0">Value</label>
+                            <label id="slider0_0_Label" for="slider0_0" class="mr-0_25">Value</label>
                             <input id="slider0_0" type="text" class="form-control" value="50" />
                         </div>
                     </div>
@@ -226,14 +226,14 @@ $(window).ready(function() {
             <strong>Double Slider</strong>
             <div class="slider-sample">
                 <form class="form-inline">
-                    <div id="slider1">
-                        <div class="form-group">
-                            <label id="slider1_0_Label" for="slider1_0">Min</label>
+                    <div id="slider1" class="d-flex flex-items-center">
+                        <div class="form-group mr-0_25">
+                            <label id="slider1_0_Label" for="slider1_0" class="mr-0_25">Min</label>
                             <input id="slider1_0" type="text" class="form-control" value="-25" />
                         </div>
                         <div class="form-group">
                             <input id="slider1_1" type="text" class="form-control" value="25" />
-                            <label id="slider1_1_Label" for="slider1_1">Max</label>
+                            <label id="slider1_1_Label" for="slider1_1" class="ml-0_25">Max</label>
                         </div>
                     </div>
                 </form>
@@ -250,9 +250,9 @@ $(window).ready(function() {
             <strong>Double Select Slider</strong>
             <div class="slider-sample">
                 <form class="form-inline">
-                    <div id="slider2">
-                        <div class="form-group">
-                            <label id="slider2_0_Label" for="slider2_0">Start</label>
+                    <div id="slider2" class="d-flex flex-items-center">
+                        <div class="form-group mr-0_25">
+                            <label id="slider2_0_Label" for="slider2_0" class="mr-0_25">Start</label>
                             <select id="slider2_0" class="form-control">
                                 <option value="12:00 am">12:00 am</option>
                                 <option value="1:00 am">1:00 am</option>
@@ -309,7 +309,7 @@ $(window).ready(function() {
                                 <option value="11:00 pm">11:00 pm</option>
                                 <option value="12:00 am">12:00 am</option>
                             </select>
-                            <label id="slider2_1_Label" for="slider2_1">End</label>
+                            <label id="slider2_1_Label" for="slider2_1" class="ml-0_25">End</label>
                         </div>
                     </div>
                 </form>
@@ -1395,6 +1395,33 @@ $(window).ready(function() {
                 <h4 id="three">three</h4>
                 <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
                 <p>Keytar twee blog, culpa messenger bag marfa whatever delectus food truck. Sapiente synth id assumenda. Locavore sed helvetica cliche irony, thundercats you probably haven't heard of them consequat hoodie gluten-free lo-fi fap aliquip. Labore elit placeat before they sold out, terry richardson proident brunch nesciunt quis cosby sweater pariatur keffiyeh ut helvetica artisan. Cardigan craft beer seitan readymade velit. VHS chambray laboris tempor veniam. Anim mollit minim commodo ullamco thundercats.</p>
+            </div>
+
+            <div class="row mb-1">
+                <div class="col-4">
+                    <div id="lgs-example" class="list-group">
+                        <a class="list-group-item list-group-item-action" href="#lgs-alpha">Alpha</a>
+                        <a class="list-group-item list-group-item-action" href="#lgs-beta">Beta</a>
+                        <a class="list-group-item list-group-item-action" href="#lgs-one">One</a>
+                        <a class="list-group-item list-group-item-action" href="#lgs-two">Two</a>
+                        <a class="list-group-item list-group-item-action" href="#lgs-three">Three</a>
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div data-cfw="scrollspy" data-cfw-scrollspy-target="#lgs-example" data-cfw-scrollspy-offset="0" class="cf-example-scrollspy">
+                        <h4 id="lgs-alpha">Alpha</h4>
+                        <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
+                        <h4 id="lgs-beta">Beta</h4>
+                        <p>Veniam marfa mustache skateboard, adipisicing fugiat velit pitchfork beard. Freegan beard aliqua cupidatat mcsweeney's vero. Cupidatat four loko nisi, ea helvetica nulla carles. Tattooed cosby sweater food truck, mcsweeney's quis non freegan vinyl. Lo-fi wes anderson +1 sartorial. Carles non aesthetic exercitation quis gentrify. Brooklyn adipisicing craft beer vice keytar deserunt.</p>
+                        <h4 id="lgs-one">one</h4>
+                        <p>Occaecat commodo aliqua delectus. Fap craft beer deserunt skateboard ea. Lomo bicycle rights adipisicing banh mi, velit ea sunt next level locavore single-origin coffee in magna veniam. High life id vinyl, echo park consequat quis aliquip banh mi pitchfork. Vero VHS est adipisicing. Consectetur nisi DIY minim messenger bag. Cred ex in, sustainable delectus consectetur fanny pack iphone.</p>
+                        <h4 id="lgs-two">two</h4>
+                        <p>In incididunt echo park, officia deserunt mcsweeney's proident master cleanse thundercats sapiente veniam. Excepteur VHS elit, proident shoreditch +1 biodiesel laborum craft beer. Single-origin coffee wayfarers irure four loko, cupidatat terry richardson master cleanse. Assumenda you probably haven't heard of them art party fanny pack, tattooed nulla cardigan tempor ad. Proident wolf nesciunt sartorial keffiyeh eu banh mi sustainable. Elit wolf voluptate, lo-fi ea portland before they sold out four loko. Locavore enim nostrud mlkshk brooklyn nesciunt.</p>
+                        <h4 id="lgs-three">three</h4>
+                        <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
+                        <p>Keytar twee blog, culpa messenger bag marfa whatever delectus food truck. Sapiente synth id assumenda. Locavore sed helvetica cliche irony, thundercats you probably haven't heard of them consequat hoodie gluten-free lo-fi fap aliquip. Labore elit placeat before they sold out, terry richardson proident brunch nesciunt quis cosby sweater pariatur keffiyeh ut helvetica artisan. Cardigan craft beer seitan readymade velit. VHS chambray laboris tempor veniam. Anim mollit minim commodo ullamco thundercats.</p>
+                    </div>
+                </div>
             </div>
 
             <h2 id="collapse">Collapse:</h2>
