--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3511,7 +3511,7 @@ Anchor variants:<br />
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <img src="../assets/img/test.gif" class="card-img" alt="Card image" style="width: 100%; opacity: .3;">
+      <img src="../assets/img/test.gif" class="card-img img-responsive" alt="Card image" style="width: 100%; opacity: .3;">
       <div class="card-img-overlay">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -3786,7 +3786,7 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img" data-src="holder.js/100px200" alt="Card image" />
+    <img class="card-img img-responsive" data-src="holder.js/100px200" alt="Card image" />
   </div>
   <div class="card text-right">
     <div class="card-body">
