--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -4198,9 +4198,9 @@ Anchor variants:<br />
 <strong>Single Slider:</strong>
 <div class="slider-sample">
     <form class="form-inline">
-        <div id="slider0">
+        <div id="slider0" class="d-flex flex-items-center">
             <div class="form-group">
-                <label id="slider0_0_Label" for="slider0_0">Value</label>
+                <label id="slider0_0_Label" for="slider0_0" class="mr-0_25">Value</label>
                 <input id="slider0_0" type="text" class="form-control" value="50" />
             </div>
         </div>
@@ -4217,14 +4217,14 @@ $('#slider0').CFW_Slider({
 <strong>Double Slider</strong>
 <div class="slider-sample">
     <form class="form-inline">
-        <div id="slider1">
-            <div class="form-group">
-                <label id="slider1_0_Label" for="slider1_0">Min</label>
+        <div id="slider1" class="d-flex flex-items-center">
+            <div class="form-group mr-0_25">
+                <label id="slider1_0_Label" for="slider1_0" class="mr-0_25">Min</label>
                 <input id="slider1_0" type="text" class="form-control" value="-25" />
             </div>
             <div class="form-group">
                 <input id="slider1_1" type="text" class="form-control" value="25" />
-                <label id="slider1_1_Label" for="slider1_1">Max</label>
+                <label id="slider1_1_Label" for="slider1_1" class="ml-0_25">Max</label>
             </div>
         </div>
     </form>
@@ -4241,9 +4241,9 @@ $('#slider1').CFW_Slider({
 <strong>Double Select Slider</strong>
 <div class="slider-sample">
     <form class="form-inline">
-        <div id="slider2">
-            <div class="form-group">
-                <label id="slider2_0_Label" for="slider2_0">Start</label>
+        <div id="slider2" class="d-flex flex-items-center">
+            <div class="form-group mr-0_25">
+                <label id="slider2_0_Label" for="slider2_0" class="mr-0_25">Start</label>
                 <select id="slider2_0" class="form-control">
                     <option value="12:00 am">12:00 am</option>
                     <option value="1:00 am">1:00 am</option>
@@ -4300,7 +4300,7 @@ $('#slider1').CFW_Slider({
                     <option value="11:00 pm">11:00 pm</option>
                     <option value="12:00 am">12:00 am</option>
                 </select>
-                <label id="slider2_1_Label" for="slider2_1">End</label>
+                <label id="slider2_1_Label" for="slider2_1" class="ml-0_25">End</label>
             </div>
         </div>
     </form>
